adding change avatar button

--- a/frontend/html/feed.html
+++ b/frontend/html/feed.html
@@ -51,7 +51,11 @@
             <div id="myDropdown" class="dropdown__content">
                 <div class="dropdown__content__text">
                     <p>Paramètres</p>
-                    <a href="#">Changer la photo de profil</a>
+                    <!--<a href="#">Changer la photo de profil</a>-->
+                    <label for="uploadImage" class="custom-file-upload" tabindex="0" >
+                        <span>Changer la photo de profil</span>
+                        <input type="file" id="uploadGif" name="image" accept="image/*" tabindex="-1" />
+                    </label>
                     <a href="#">Mode sombre</a>
                     <a href="#">Déconnexion</a>
                     <a href="#">Supprimer le compte</a>
