focus style of avatar

--- a/frontend/html/feed.html
+++ b/frontend/html/feed.html
@@ -46,7 +46,7 @@
             <!--clicking on the avatar reveals a dropdown menu-->
             <div class="dropdown">
                 <!--this is the dropdown button but also the profile picture-->
-                <img onclick="myFunction()" class="avatar dropdown__btn" src="../images/avatar_vertical.jpg"/>  
+                <img onclick="myFunction()" class="avatar dropdown__btn" src="../images/avatar_vertical.jpg" tabindex="0"/>  
             </div>
             <div id="myDropdown" class="dropdown__content">
                 <div class="dropdown__content__text">
