admin delete button

--- a/frontend/html/feed.html
+++ b/frontend/html/feed.html
@@ -92,6 +92,9 @@
                         <img class="avatar" src="../images/avatar.png" />
                         <span class="firstName">Louise</span>
                         <span class="lastName">Bourgeois</span>
+                        <button class="adminDelete" type="button">
+                            <i class="material-icons">delete_forever</i>
+                        </button>
                     </div>
     
                     <div class="publicationContent">
@@ -127,6 +130,9 @@
                             <img class="avatar" src="../images/avatar-rectangle.jpg" />
                             <span class="firstName">Mickaël</span>
                             <span class="lastName">Georges</span>
+                            <button class="adminDelete" type="button">
+                                <i class="material-icons">delete_forever</i>
+                            </button>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
