login page style unification

--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -43,7 +43,7 @@
                 
 
             <!--login form-->
-            <form>
+            <form class="bloc">
                 <div class="container">
                     <!--here are the inputs and submit btn-->
                     <input type="text" placeholder="Adresse e-mail" name="email" required />
