--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -99,9 +99,9 @@
                         <div class="imgUpload">
                             <p class="label">Photo de profil <b>(vous pourrez en changer)</b></p>    
                             <div class="imgUpload__line">
-                                <label for="uploadAvatar" class="custom-file-upload" id="labelUpload" tabindex="-1" >
-                                    <input type="file" id="uploadAvatar" name="avatar" accept="image/*" tabindex="0"/>
+                                <label for="télécharger_avatar" class="custom-file-upload" id="labelUpload" tabindex="-1" >
                                     Parcourir les fichiers
+                                    <input type="file" id="télécharger_avatar" name="avatar" accept="image/*" onfocus="focusBtn()" onblur="blurBtn()" tabindex="0"/>
                                 </label>
                                 <!--This is the default avatar, replaced by user's avatar-->
                                 <img class="avatar" src="../images/avatar_default.png" />
