trying to add a nice style on focus on like/comments icons

--- a/frontend/html/feed.html
+++ b/frontend/html/feed.html
@@ -105,11 +105,11 @@
     
                     <div class="reactionLine">
                         <div class="reactionLine--likes">
-                            <i class="material-icons">favorite_outline</i>
+                            <i class="material-icons" tabindex="0">favorite_outline</i>
                             <span class="likes__counter">4</span>
                         </div>
                         <div class="reactionLine--comments">
-                            <i class="material-icons">chat_bubble</i>
+                            <i class="material-icons" tabindex="0">chat_bubble</i>
                             <span class="comments__counter">4</span>
                         </div>
                     </div>
@@ -119,8 +119,8 @@
                     <div class="writeLine">
                         <img class="avatar" src="../images/avatar_vertical.jpg" />
                         <input type="text" placeholder="Que voulez-vous dire ?" name="post" required />
-                        <button type="submit">
-                            <i class="material-icons">send</i>
+                        <button type="submit" tabindex="0">
+                            <i class="material-icons" tabindex="-1">send</i>
                         </button>
                     </div>
 
