--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -84,7 +84,7 @@
                             <label for="mot_de_passe">Mot de passe</label>
                             <section class="passwordLine">
                                 <input id="mot_de_passe" type="password" placeholder="Mot de passe" name="nom" required />
-                                <i id="icon" class="material-icons" onclick="seePassword()" onkeydown="seePassword()" tabindex="0">visibility_off</i>
+                                <i id="icon" class="material-icons" onclick="seePassword()" onkeypress="seePassword()" tabindex="0">visibility_off</i>
                             </section>
                         </div>
 
