adding labels on the posting and commenting lines

--- a/frontend/html/feed.html
+++ b/frontend/html/feed.html
@@ -69,7 +69,8 @@
                 <form>
                     <div class="writeLine">
                         <img class="avatar" src="../images/avatar_vertical.jpg" alt=""/>
-                        <input type="text" placeholder="Que voulez-vous dire ?" name="post" required />
+                        <label for="posting">Poster quelque chose</label>
+                        <input type="text" placeholder="Que voulez-vous dire ?" name="post" id="posting" required />
                         <button type="submit">
                             <i class="material-icons">send</i>
                         </button>
@@ -122,7 +123,8 @@
                 <div class="comments">
                     <div class="writeLine">
                         <img class="avatar" src="../images/avatar_vertical.jpg" alt=""/>
-                        <input type="text" placeholder="Que voulez-vous dire ?" name="post" required />
+                        <label for="commenting">Commenter</label>
+                        <input type="text" placeholder="Que voulez-vous dire ?" name="post" id="commenting" required />
                         <button type="submit">
                             <i class="material-icons">send</i>
                         </button>
