using text areas instead of input for posting and commenting

--- a/frontend/html/feed.html
+++ b/frontend/html/feed.html
@@ -70,7 +70,7 @@
                     <div class="writeLine">
                         <img class="avatar" src="../images/avatar_vertical.jpg" alt=""/>
                         <label for="posting">Poster quelque chose</label>
-                        <input type="text" placeholder="Que voulez-vous dire ?" name="post" id="posting" required />
+                        <textarea id="posting" placeholder="Que voulez-vous dire ?" name="post" required></textarea>
                         <button type="submit">
                             <i class="material-icons">send</i>
                         </button>
@@ -124,7 +124,7 @@
                     <div class="writeLine">
                         <img class="avatar" src="../images/avatar_vertical.jpg" alt=""/>
                         <label for="commenting">Commenter</label>
-                        <input type="text" placeholder="Que voulez-vous dire ?" name="post" id="commenting" required />
+                        <textarea id="commenting" placeholder="Que voulez-vous dire ?" name="post" required></textarea>
                         <button type="submit">
                             <i class="material-icons">send</i>
                         </button>
