--- a/frontend/html/feed.html
+++ b/frontend/html/feed.html
@@ -70,6 +70,7 @@
                     <div class="writeLine">
                         <img class="avatar" src="../images/avatar_vertical.jpg" alt=""/>
                         <label for="posting">Poster quelque chose</label>
+                        <!--expandable textarea-->
                         <textarea id="posting" class="autoExpand" placeholder="Que voulez-vous dire ?" name="post" rows='1' data-min-rows='1' required></textarea>
                         <button type="submit">
                             <i class="material-icons">send</i>
@@ -146,6 +147,7 @@
                 </div>
             </div>
         </main>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script type="text/javascript" src="../js/animations.js"></script>
     </body>
 </html>
