expandable textArea fixing

--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -94,10 +94,10 @@
 
                         <ul id="message" class="message">
                             <p id="validationTitle">Le mot de passe doit contenir :</p>
-                            <li id="letter" class="invalid">Une minuscule</>
-                            <li id="capital" class="invalid">Une majuscule</>
-                            <li id="number" class="invalid">Un chiffre</b></>
-                            <li id="length" class="invalid">6 charactères minimum</>
+                            <l id="letter" class="invalid">Une minuscule</li>
+                            <li id="capital" class="invalid">Une majuscule</li>
+                            <li id="number" class="invalid">Un chiffre</b></li>
+                            <li id="length" class="invalid">6 charactères minimum</li>
                         </ul>
                             
                         <div class="imgUpload">
@@ -121,6 +121,6 @@
                 </form>
             </div>
         </main>
-        <script type="text/javascript" src="../js/animations.js"></script>
+        <script type="text/javascript" src="../js/signup.js"></script>
     </body>
 </html>
