--- a/frontend/html/feed.html
+++ b/frontend/html/feed.html
@@ -125,7 +125,7 @@
                     <div class="writeLine">
                         <img class="avatar" src="../images/avatar_vertical.jpg" alt=""/>
                         <label for="commenting">Commenter</label>
-                        <textarea id="commenting" placeholder="Que voulez-vous dire ?" name="post" required></textarea>
+                        <textarea id="commenting" class="autoExpand" placeholder="Que voulez-vous dire ?" name="post" rows='1' data-min-rows='1' required></textarea>
                         <button type="submit">
                             <i class="material-icons">send</i>
                         </button>
@@ -148,6 +148,6 @@
             </div>
         </main>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script type="text/javascript" src="../js/animations.js"></script>
+        <script type="text/javascript" src="../js/feed.js"></script>
     </body>
 </html>
