--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -64,6 +64,6 @@
             </form>
         </div>
 
-        <script type="text/javascript" src="../js/animations.js"></script>
+        <script type="text/javascript" src="../js/login.js"></script>
     </body>
 </html>
