slight padding modification of texteareas

--- a/frontend/html/feed.html
+++ b/frontend/html/feed.html
@@ -71,7 +71,7 @@
                         <img class="avatar" src="../images/avatar_vertical.jpg" alt=""/>
                         <label for="posting">Poster quelque chose</label>
                         <!--expandable textarea-->
-                        <textarea id="posting" class="autoExpand" placeholder="Que voulez-vous dire ?" name="post" rows='1' data-min-rows='1' required></textarea>
+                        <textarea id="posting" class="autoExpand" placeholder="On vous écoute !" name="post" rows='1' data-min-rows='1' required></textarea>
                         <button type="submit">
                             <i class="material-icons">send</i>
                         </button>
@@ -125,7 +125,7 @@
                     <div class="writeLine">
                         <img class="avatar" src="../images/avatar_vertical.jpg" alt=""/>
                         <label for="commenting">Commenter</label>
-                        <textarea id="commenting" class="autoExpand" placeholder="Que voulez-vous dire ?" name="post" rows='1' data-min-rows='1' required></textarea>
+                        <textarea id="commenting" class="autoExpand" placeholder="On vous écoute !" name="post" rows='1' data-min-rows='1' required></textarea>
                         <button type="submit">
                             <i class="material-icons">send</i>
                         </button>
