--- a/frontend/vue/public/index.html
+++ b/frontend/vue/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> <!--material icon-->
+    <link rel="stylesheet" href="../src/styles/styles.scss" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
