backend is finally connected to frontend ! :D

--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../sass/styles.css" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> <!--material icon-->
     </head>
-    <body class="inscription">
+    <body class="inscription" id="body">
         <header>
             <!--logo with icon for bigger devices-->
             <svg class="logo logo--icon" width="425" height="65" viewBox="0 0 425 65" fill="none" xmlns="http://www.w3.org/2000/svg">
